test domain pointer

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a></li>
         <li><a target="_blank" rel="noopener noreferrer" href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a></li>
       </ul>
-      Ricky Kuang
+      Ricky Kuang | Github Pages
     </footer>
 
 
