--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,800">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.6/css/all.css">
-    <link rel="stylesheet" href="app/static/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Ricky Kuang</title>
   </head>
@@ -34,7 +34,7 @@
         <h1>Ricky Kuang</h1>
         <p>Hello, World!<br />
         Welcome to my website!</p>
-        <a class="btn btn-danger" href="app/static/rkuang-resume.pdf" download="rkuang-resume.pdf">
+        <a class="btn btn-danger" href="assets/rkuang-resume.pdf" download="rkuang-resume.pdf">
           <span class="fas fa-cloud-download-alt"></span>
           Resume
         </a>
@@ -48,7 +48,7 @@
 
     <div id="about">
       <div class="avatar">
-        <img src="app/static/avatar.jpg"/>
+        <img src="images/avatar.jpg"/>
       </div>
       <div class="summary">
         <h1>About me</h1>
@@ -80,6 +80,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
     <!-- Custom JavaScript -->
-    <script src="app/static/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
