make learn more div clickable

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           Resume
         </a>
       </div>
-      <div class="learn_more">
-        <a href=#about>Learn More<br />
-        <i class="fas fa-angle-down"></i>
-        </a>
-      </div>
+      <a id="learn_more" href=#about>
+        <div class="learn_more">Learn More<br/>
+          <i class="fas fa-angle-down"></i>
+        </div>
+      </a>
     </div>
 
     <div id="about">
