added boilerplate code for projects

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbar-items">
         <div class="navbar-nav ml-auto">
           <a class="nav-item nav-link" href="#about">About</a>
-          <a class="nav-item nav-link" href="#">Portfolio</a>
+          <a class="nav-item nav-link" href="#projects">Projects</a>
           <a class="nav-item nav-link" href="#footer">Contact</a>
         </div>
       </div>
@@ -61,6 +61,29 @@
           what I'm working on!
         </p>
       </div>
+    </div>
+
+    <div id="projects">
+      <div class="project">
+        <div class="image">
+          <img src="images/pic01.jpg">
+        </div>
+        <div class="text">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, ducimus expedita dignissimos enim quia esse! Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis. Perferendis, saepe.
+        </div>
+      </div>
+      <div class="project">
+          <div class="image">
+              <img src="images/pic02.jpg">
+            </div>
+            <div class="text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, ducimus expedita dignissimos enim quia esse! Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis. Perferendis, saepe.
+            </div>
+      </div>
+    </div>
+
+    <div id="gap">
+      <p class="container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quam facere eaque accusantium. Eveniet pariatur placeat minima laudantium, cumque molestiae voluptas? Beatae in harum magnam totam quisquam nam perferendis modi.</p>
     </div>
 
     <footer id="footer">
