added projects sections and gap section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Ricky Kuang</h1>
         <p>Hello, World!<br />
         Welcome to my website!</p>
-        <a class="btn btn-danger" href="assets/rkuang-resume.pdf" download="rkuang-resume.pdf">
+        <a class="btn btn-danger" href="assets/rkuang_resume.pdf" download="rkuang-resume.pdf">
           <span class="fas fa-cloud-download-alt"></span>
           Resume
         </a>
@@ -69,21 +69,47 @@
           <img src="images/pic01.jpg">
         </div>
         <div class="text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, ducimus expedita dignissimos enim quia esse! Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis. Perferendis, saepe.
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Numquam, ducimus expedita dignissimos enim quia esse! 
+            Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis. 
+            Perferendis, saepe.
+          </p>
         </div>
       </div>
       <div class="project">
-          <div class="image">
-              <img src="images/pic02.jpg">
-            </div>
-            <div class="text">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, ducimus expedita dignissimos enim quia esse! Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis. Perferendis, saepe.
-            </div>
+        <div class="image">
+          <img src="images/pic02.jpg">
+        </div>
+        <div class="text">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Numquam, ducimus expedita dignissimos enim quia esse!
+            Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis.
+            Perferendis, saepe.
+          </p>
+        </div>
       </div>
     </div>
 
     <div id="gap">
-      <p class="container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur quam facere eaque accusantium. Eveniet pariatur placeat minima laudantium, cumque molestiae voluptas? Beatae in harum magnam totam quisquam nam perferendis modi.</p>
+      <div class="gap-text">
+        <h4>Thank you for visiting!</h4>
+        <p>
+          I am constantly looking for opportunities to meet new people and learn new things!
+          If you like what you see, please don't hesitate to reach out to me by checking out the links below!
+        </p>
+      </div>
+
+      <div class="gap-buttons">
+        <a class="btn btn-danger" href="assets/rkuang_resume.pdf" download="rkuang-resume.pdf">
+          <span class="fas fa-cloud-download-alt"></span>
+          Resume
+        </a>
+        <a class="btn btn-to-top" href="#header">
+          Back To Top
+        </a>
+      </div>
     </div>
 
     <footer id="footer">
@@ -104,5 +130,9 @@
     
     <!-- Custom JavaScript -->
     <script src="assets/js/script.js"></script>
+
+    <script id="__bs_script__">//<![CDATA[
+      document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.6'><\/script>".replace("HOST", location.hostname));
+  //]]></script>
   </body>
 </html>
