--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Ricky Kuang</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
   </head>
 
   <body>
@@ -51,11 +58,12 @@
         <img src="images/avatar.jpg"/>
       </div>
       <div class="summary">
-        <h1>About me</h1>
+        <h2>About me</h2>
         <p>Hi there! My name is Ricky Kuang. I have recently 
           graduated from UC Santa Barbara with a major in 
           Computer Science and a minor in Statistical 
-          Science, and I am an aspiring Software Engineer. <br /> <br />
+          Science, and I am an aspiring Software Engineer. 
+          <br /> <br />
           This website is a work in progress, so please 
           come back every once in a while to check out 
           what I'm working on!
@@ -69,6 +77,7 @@
           <img src="images/pic01.jpg">
         </div>
         <div class="text">
+          <h4>Project 1</h4>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
             Numquam, ducimus expedita dignissimos enim quia esse! 
@@ -82,6 +91,7 @@
           <img src="images/pic02.jpg">
         </div>
         <div class="text">
+          <h4>Project 2</h4>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Numquam, ducimus expedita dignissimos enim quia esse!
