adjusted styles for thankyou section

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       </div>
     </div>
 
-    <div id="gap">
-      <div class="gap-text">
+    <div id="thankyou">
+      <div class="thankyou-text">
         <h4>Thank you for visiting!</h4>
         <p>
           I am constantly looking for opportunities to meet new people and learn new things!
@@ -111,7 +111,7 @@
         </p>
       </div>
 
-      <div class="gap-buttons">
+      <div class="thankyou-buttons">
         <a class="btn btn-danger" href="assets/rkuang_resume.pdf" download="rkuang-resume.pdf">
           <span class="fas fa-cloud-download-alt"></span>
           Resume
@@ -128,7 +128,7 @@
         <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a></li>
         <li><a target="_blank" rel="noopener noreferrer" href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a></li>
       </ul>
-      Ricky Kuang | Github Pages
+      <p>&copy; 2018 Ricky Kuang</p>
     </footer>
 
 
