added content wrapper for better responsive design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-fixed-top navbar-expand-md navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md">
       <a class="navbar-brand" href="#header">Ricky Kuang</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar-items" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="fas fa-bars"></span>
@@ -54,20 +54,22 @@
     </div>
 
     <div id="about">
-      <div class="avatar">
-        <img src="images/avatar.jpg"/>
-      </div>
-      <div class="summary">
-        <h2>About me</h2>
-        <p>Hi there! My name is Ricky Kuang. I have recently 
-          graduated from UC Santa Barbara with a major in 
-          Computer Science and a minor in Statistical 
-          Science, and I am an aspiring Software Engineer. 
-          <br /> <br />
-          This website is a work in progress, so please 
-          come back every once in a while to check out 
-          what I'm working on!
-        </p>
+      <div class="content-wrapper">
+        <div class="about-avatar">
+          <img src="images/avatar.jpg"/>
+        </div>
+        <div class="about-summary">
+          <h2>About me</h2>
+          <p>Hi there! My name is Ricky Kuang. I have recently 
+            graduated from UC Santa Barbara with a major in 
+            Computer Science and a minor in Statistical 
+            Science, and I am an aspiring Software Engineer. 
+            <br /> <br />
+            This website is a work in progress, so please 
+            come back every once in a while to check out 
+            what I'm working on!
+          </p>
+        </div>
       </div>
     </div>
 
@@ -103,22 +105,24 @@
     </div>
 
     <div id="thankyou">
-      <div class="thankyou-text">
-        <h4>Thank you for visiting!</h4>
-        <p>
-          I am constantly looking for opportunities to meet new people and learn new things!
-          If you like what you see, please don't hesitate to reach out to me by checking out the links below!
-        </p>
-      </div>
+      <div class="content-wrapper">
+        <div class="thankyou-text">
+          <h4>Thank you for visiting!</h4>
+          <p>
+            I am constantly looking for opportunities to meet new people and learn new things!
+            If you like what you see, please don't hesitate to reach out to me by checking out the links below!
+          </p>
+        </div>
 
-      <div class="thankyou-buttons">
-        <a class="btn btn-danger" href="assets/rkuang_resume.pdf" download="rkuang-resume.pdf">
-          <span class="fas fa-cloud-download-alt"></span>
-          Resume
-        </a>
-        <a class="btn btn-to-top" href="#header">
-          Back To Top
-        </a>
+        <div class="thankyou-buttons">
+          <a class="btn btn-danger" href="assets/rkuang_resume.pdf" download="rkuang-resume.pdf">
+            <span class="fas fa-cloud-download-alt"></span>
+            Resume
+          </a>
+          <a class="btn btn-to-top" href="#header">
+            Back To Top
+          </a>
+        </div>
       </div>
     </div>
 
