adjust header styles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
 
     <div id="header">
-      <div class="header-inner">
+      <div class="header-text">
         <h1>Ricky Kuang</h1>
         <p>Hello, World!<br />
         Welcome to my website!</p>
@@ -46,10 +46,9 @@
           Resume
         </a>
       </div>
-      <a id="learn_more" href=#about>
-        <div class="learn_more">Learn More<br/>
-          <i class="fas fa-angle-down"></i>
-        </div>
+      <a class="learn_more" href=#about>
+        Learn More<br/>
+        <i class="fas fa-angle-down"></i>
       </a>
     </div>
 
