update for publishing

--- a/index.html
+++ b/index.html
@@ -73,32 +73,34 @@
     </div>
 
     <div id="projects">
-      <div class="project">
-        <div class="image">
-          <img src="images/pic01.jpg">
+      <div class="content-wrapper">
+        <div class="project">
+          <div class="image">
+            <img src="images/pic01.jpg">
+          </div>
+          <div class="text">
+            <h4>Project 1</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+              Numquam, ducimus expedita dignissimos enim quia esse! 
+              Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis. 
+              Perferendis, saepe.
+            </p>
+          </div>
         </div>
-        <div class="text">
-          <h4>Project 1</h4>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Numquam, ducimus expedita dignissimos enim quia esse! 
-            Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis. 
-            Perferendis, saepe.
-          </p>
-        </div>
-      </div>
-      <div class="project">
-        <div class="image">
-          <img src="images/pic02.jpg">
-        </div>
-        <div class="text">
-          <h4>Project 2</h4>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Numquam, ducimus expedita dignissimos enim quia esse!
-            Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis.
-            Perferendis, saepe.
-          </p>
+        <div class="project">
+          <div class="image">
+            <img src="images/pic02.jpg">
+          </div>
+          <div class="text">
+            <h4>Project 2</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Numquam, ducimus expedita dignissimos enim quia esse!
+              Id ad deserunt dolorum quos consequuntur fugiat nostrum tempore quaerat architecto, aperiam veritatis.
+              Perferendis, saepe.
+            </p>
+          </div>
         </div>
       </div>
     </div>
