--- a/index.html
+++ b/index.html
@@ -128,12 +128,14 @@
     </div>
 
     <footer id="footer">
-      <ul class="icons">
-        <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/" class="fab fa-github"></a></li>
-        <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a></li>
-        <li><a target="_blank" rel="noopener noreferrer" href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a></li>
-      </ul>
-      <p>&copy; 2018 Ricky Kuang</p>
+      <div class="content-wrapper">
+        <div class="icons">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/" class="fab fa-github"></a>
+          <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a>
+          <a target="_blank" rel="noopener noreferrer" href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a>
+        </div>
+        <p>&copy; 2018 Ricky Kuang</p>
+      </div>
     </footer>
 
 
