adjusted thankyou text and style to respect spacing between text and buttons

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h4>Thank you for visiting!</h4>
           <p>
             I am constantly looking for opportunities to meet new people and learn new things!
-            If you like what you see, please don't hesitate to reach out to me by checking out the links below!
+            If you like what you see, please don't hesitate to reach out to me by checking out the links in the footer below!
           </p>
         </div>
 
