added responsive about

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p>Hi there! My name is Ricky Kuang. I have recently 
             graduated from UC Santa Barbara with a major in 
             Computer Science and a minor in Statistical 
-            Science, and I am an aspiring Software Engineer. 
+            Science, and I am an aspiring Software Engineer!
             <br /> <br />
             This website is a work in progress, so please 
             come back every once in a while to check out 
@@ -134,7 +134,10 @@
           <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a>
           <a target="_blank" rel="noopener noreferrer" href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a>
         </div>
-        <p>&copy; 2018 Ricky Kuang</p>
+        <div class="text">
+          <p>&copy; 2018 Ricky Kuang</p>
+          <p class="design">design: HTML5UP</p>
+        </div>
       </div>
     </footer>
 
