--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div id="projects">
+    <!-- <div id="projects">
       <div class="content-wrapper">
         <div class="project">
           <div class="image">
@@ -102,6 +102,17 @@
             </p>
           </div>
         </div>
+      </div>
+    </div> -->
+
+    <div id="projects">
+      <h2>My Projects</h2>
+      <div class="content-wrapper">
+        <a href="#"><img src="images/pic04.jpg" /></a>
+        <a href="#"><img src="images/pic05.jpg" /></a>
+        <a href="#"><img src="images/pic03.jpg" /></a>
+        <a href="#"><img src="images/pic04.jpg" /></a>
+        <a href="#"><img src="images/pic05.jpg" /></a>
       </div>
     </div>
 
@@ -136,7 +147,7 @@
         </div>
         <div class="text">
           <p>&copy; 2018 Ricky Kuang</p>
-          <p class="design">design: HTML5UP</p>
+          <p class="design">inspired by HTML5UP</p>
         </div>
       </div>
     </footer>
