css and browsersync

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <!-- Custom JavaScript -->
     <script src="assets/js/script.js"></script>
 
-    <!-- <script id="__bs_script__">//<![CDATA[
+    <script id="__bs_script__">//<![CDATA[
       document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.6'><\/script>".replace("HOST", location.hostname));
-  //]]></script> -->
+  //]]></script>
   </body>
 </html>
