--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="content-wrapper">
         <div class="project">
           <img src="images/pic01.jpg" />
-          <a href="https://github.com/rkuang/Homies">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Homies">
             <div class="project-text">
               <h3>Homies</h3>
               <p>An Android mobile application made to facilitate aspects of shared living.</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="project">
           <img src="images/pic02.jpg" />
-          <a href="#">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Mosaic">
             <div class="project-text">
               <h3>Mosaic</h3>
               <p>A Ruby on Rails web application for sharing images and connecting with friends</p>
@@ -95,7 +95,7 @@
         </div>
         <div class="project">
           <img src="images/pic03.jpg" />
-          <a href="#">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Chronooz">
             <div class="project-text">
               <h3>Chronooz</h3>
               <p>A Ruby on Rails web application made for users who want to catch up on the latest news</p>
@@ -104,7 +104,7 @@
         </div>
         <div class="project">
           <img src="images/pic04.jpg" />
-          <a href="#">
+          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/convolutional_neural_network">
             <div class="project-text">
               <h3>Convolutional Neural Network</h3>
               <p>Utilized the Fashion MNIST dataset to train a deep learning model and predict labels</p>
@@ -160,8 +160,8 @@
     <!-- Custom JavaScript -->
     <script src="assets/js/script.js"></script>
 
-    <script id="__bs_script__">//<![CDATA[
+    <!-- <script id="__bs_script__">//<![CDATA[
       document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.6'><\/script>".replace("HOST", location.hostname));
-  //]]></script>
+  //]]></script> -->
   </body>
 </html>
