add buttons for filtering projects

--- a/index.html
+++ b/index.html
@@ -73,8 +73,15 @@
     </div>
 
     <div id="projects">
-      <h2>My Projects</h2>
       <div class="content-wrapper">
+        <h2>My Projects</h2>
+        <div class="categories">
+          <button>Show All</button>
+          <button>Android</button>
+          <button>iOS</button>
+          <button>Web Dev</button>
+          <button>Data Science</button>
+        </div>
         <div class="project">
           <img src="images/pic01.jpg" />
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Homies">
