filter buttons and styles

--- a/index.html
+++ b/index.html
@@ -86,12 +86,13 @@
       <div class="content-wrapper">
         <h2>My Projects</h2>
         <div class="filters">
+          <button class="btn btn-filter active" onclick="filterButtonEvent('all')">Show All</button>
           <button class="btn btn-filter" onclick="filterButtonEvent('android')">Android</button>
           <button class="btn btn-filter" onclick="filterButtonEvent('ios')">iOS</button>
           <button class="btn btn-filter" onclick="filterButtonEvent('web')">Web Dev</button>
           <button class="btn btn-filter" onclick="filterButtonEvent('data')">Data Science</button>
         </div>
-        <div class="project android">
+        <div class="project android show">
           <img src="images/pic01.jpg" />
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Homies">
             <div class="project-text">
@@ -100,7 +101,7 @@
             </div>
           </a>
         </div>
-        <div class="project web">
+        <div class="project web show">
           <img src="images/pic02.jpg" />
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Mosaic">
             <div class="project-text">
@@ -109,7 +110,7 @@
             </div>
           </a>
         </div>
-        <div class="project web">
+        <div class="project web show">
           <img src="images/pic03.jpg" />
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Chronooz">
             <div class="project-text">
@@ -118,7 +119,7 @@
             </div>
           </a>
         </div>
-        <div class="project data">
+        <div class="project data show">
           <img src="images/pic04.jpg" />
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/convolutional_neural_network">
             <div class="project-text">
