--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       <div class="content-wrapper">
         <h2>My Projects</h2>
         <div class="filters">
-          <button class="btn btn-filter active" onclick="filterButtonEvent('all')">Show All</button>
-          <button class="btn btn-filter" onclick="filterButtonEvent('android')">Android</button>
-          <button class="btn btn-filter" onclick="filterButtonEvent('ios')">iOS</button>
-          <button class="btn btn-filter" onclick="filterButtonEvent('web')">Web Dev</button>
-          <button class="btn btn-filter" onclick="filterButtonEvent('data')">Data Science</button>
+          <a href="#projects" class="btn btn-filter active" onclick="filterButtonEvent('all')">Show All</a>
+          <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('android')">Android</a>
+          <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('ios')">iOS</a>
+          <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('web')">Web Dev</a>
+          <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('data')">Data Science</a>
         </div>
         <div class="project android show">
           <img src="images/pic01.jpg" />
@@ -158,7 +158,7 @@
         <div class="icons">
           <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/" class="fab fa-github"></a>
           <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ricky-kuang/" class="fab fa-linkedin"></a>
-          <a target="_blank" rel="noopener noreferrer" href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a>
+          <a rel="noopener noreferrer" href="mailto:rkuang26@gmail.com" class="fas fa-envelope"></a>
         </div>
         <div class="text">
           <p>&copy; 2018 Ricky Kuang</p>
@@ -177,8 +177,8 @@
     <!-- Custom JavaScript -->
     <script src="assets/js/script.js"></script>
 
-    <script id="__bs_script__">//<![CDATA[
+    <!-- <script id="__bs_script__">//<![CDATA[
       document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.6'><\/script>".replace("HOST", location.hostname));
-  //]]></script>
+  //]]></script> -->
   </body>
 </html>
