--- a/index.html
+++ b/index.html
@@ -1,16 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126802391-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-126802391-1');
-    </script>
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -93,40 +83,64 @@
           <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('data')">Data Science</a>
         </div>
         <div class="project android show">
-          <img src="images/pic01.jpg" />
-          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Homies">
+          <div class="project-image">
             <div class="project-text">
-              <h3>Homies</h3>
               <p>An Android mobile application made to facilitate aspects of shared living.</p>
+              <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Homies" class="btn">View</a>
             </div>
-          </a>
+            <img src="images/pic01.jpg">
+          </div>
+          <div class="project-header">
+            <h3>Homies</h3>
+            <div class="project-tags">
+              <i class="fab fa-android"></i>
+            </div>
+          </div>
         </div>
         <div class="project web show">
-          <img src="images/pic02.jpg" />
-          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Mosaic">
+          <div class="project-image">
             <div class="project-text">
-              <h3>Mosaic</h3>
               <p>A Ruby on Rails web application for sharing images and connecting with friends</p>
+              <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Mosaic" class="btn">View</a>
             </div>
-          </a>
+            <img src="images/pic02.jpg">
+          </div>
+          <div class="project-header">
+            <h3>Mosaic</h3>
+            <div class="project-tags">
+              <i class="fas fa-laptop"></i>
+            </div>
+          </div>
         </div>
         <div class="project web show">
-          <img src="images/pic03.jpg" />
-          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Chronooz">
+          <div class="project-image">
             <div class="project-text">
-              <h3>Chronooz</h3>
               <p>A Ruby on Rails web application made for users who want to catch up on the latest news</p>
+              <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/Chronooz" class="btn">View</a>
             </div>
-          </a>
+            <img src="images/pic03.jpg" />
+          </div>
+          <div class="project-header">
+            <h3>Chronooz</h3>
+            <div class="project-tags">
+              <i class="fas fa-laptop"></i>
+            </div>
+          </div>
         </div>
         <div class="project data show">
-          <img src="images/pic04.jpg" />
-          <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/convolutional_neural_network">
+          <div class="project-image">
             <div class="project-text">
-              <h3>Convolutional Neural Network</h3>
               <p>Utilized the Fashion MNIST dataset to train a deep learning model and predict labels</p>
+              <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/convolutional_neural_network" class="btn">View</a>
             </div>
-          </a>
+            <img src="images/pic04.jpg" />
+          </div>
+          <div class="project-header">
+            <h3>Convolutional Neural Network</h3>
+            <div class="project-tags">
+              <i class="fas fa-chart-bar"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div> <!-- End Projects section-->
