--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
           <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('android')">Android</a>
           <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('ios')">iOS</a>
           <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('web')">Web Dev</a>
+          <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('linux')">Linux</a>
           <a href="#projects" class="btn btn-filter" onclick="filterButtonEvent('data')">Data Science</a>
         </div>
         <div class="project android show">
@@ -94,6 +95,21 @@
             <h3>Homies</h3>
             <div class="project-tags">
               <i class="fab fa-android"></i>
+            </div>
+          </div>
+        </div>
+        <div class="project linux show">
+          <div class="project-image">
+            <div class="project-text">
+              <p>An operating system that runs on a simulated MIPS machine and mimics the capabilities of Linux</p>
+              <a href="#" class="btn">Code unavailable</a>
+            </div>
+            <img src="images/pic06.jpg">
+          </div>
+          <div class="project-header">
+            <h3>KOS</h3>
+            <div class="project-tags">
+              <i class="fab fa-linux"></i>
             </div>
           </div>
         </div>
