--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
             <img src="images/pic01.jpg">
           </div>
           <div class="project-header">
-            <h3>Homies</h3>
+            <div class="project-info">
+              <h3>Homies</h3>
+              <ul class="project-tools">
+                <li>Kotlin,</li>
+                <li>Firebase,</li>
+                <li>XML</li>
+              </ul>
+            </div>
             <div class="project-tags">
               <i class="fab fa-android"></i>
             </div>
@@ -107,9 +114,37 @@
             <img src="images/pic06.jpg">
           </div>
           <div class="project-header">
-            <h3>KOS</h3>
+            <div class="project-info">
+              <h3>KOS</h3>
+              <ul class="project-tools">
+                <li>C</li>
+              </ul>
+            </div>
             <div class="project-tags">
               <i class="fab fa-linux"></i>
+            </div>
+          </div>
+        </div>
+        <div class="project linux show">
+          <div class="project-image">
+            <div class="project-text">
+              <p>A MySQL database management system written where users can trade stocks on an imaginary brokerage</p>
+              <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/starsrus" class="btn">View</a>
+            </div>
+            <img src="images/pic05.jpg">
+          </div>
+          <div class="project-header">
+            <div>
+              <h3>Stars R' Us</h3>
+              <ul class="project-tools">
+                <li>Java,</li>
+                <li>MySQL,</li>
+                <li>JDBC</li>
+              </ul>
+            </div>
+            <div class="project-tags">
+              <i class="fab fa-linux"></i>
+              <i class="fas fa-database"></i>
             </div>
           </div>
         </div>
