--- a/index.html
+++ b/index.html
@@ -105,6 +105,26 @@
             </div>
           </div>
         </div>
+        <div class="project ios show">
+          <div class="project-image">
+            <div class="project-text">
+              <p>An iOS application that allows users to quickly calculate an appropriate tip for their table service</p>
+              <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/TipPro" class="btn">View</a>
+            </div>
+            <img src="images/pic04.jpg">
+          </div>
+          <div class="project-header">
+            <div class="project-info">
+              <h3>Tip Pro</h3>
+              <ul class="project-tools">
+                <li>Swift</li>
+              </ul>
+            </div>
+            <div class="project-tags">
+              <i class="fab fa-apple"></i>
+            </div>
+          </div>
+        </div>
         <div class="project linux show">
           <div class="project-image">
             <div class="project-text">
@@ -134,7 +154,7 @@
             <img src="images/pic05.jpg">
           </div>
           <div class="project-header">
-            <div>
+            <div class="project-info">
               <h3>Stars R' Us</h3>
               <ul class="project-tools">
                 <li>Java,</li>
@@ -157,7 +177,12 @@
             <img src="images/pic02.jpg">
           </div>
           <div class="project-header">
-            <h3>Mosaic</h3>
+            <div class="project-info">
+              <h3>Mosaic</h3>
+              <ul class="project-tools">
+                <li>Ruby on Rails</li>
+              </ul>
+            </div>
             <div class="project-tags">
               <i class="fas fa-laptop"></i>
             </div>
@@ -172,7 +197,12 @@
             <img src="images/pic03.jpg" />
           </div>
           <div class="project-header">
-            <h3>Chronooz</h3>
+            <div class="project-info">
+              <h3>Chronooz</h3>
+              <ul class="project-tools">
+                <li>Ruby on Rails</li>
+              </ul>
+            </div>
             <div class="project-tags">
               <i class="fas fa-laptop"></i>
             </div>
@@ -181,13 +211,20 @@
         <div class="project data show">
           <div class="project-image">
             <div class="project-text">
-              <p>Utilized the Fashion MNIST dataset to train a deep learning model and predict labels</p>
+              <p>Utilized the Fashion MNIST dataset to train a deep learning model and predict labels using convolutional neural networks</p>
               <a target="_blank" rel="noopener noreferrer" href="https://github.com/rkuang/convolutional_neural_network" class="btn">View</a>
             </div>
             <img src="images/pic04.jpg" />
           </div>
           <div class="project-header">
-            <h3>Convolutional Neural Network</h3>
+            <div class="project-info">
+              <h3>Conv Neural Net</h3>
+              <ul class="project-tools">
+                <li>Python,</li>
+                <li>Tensor Flow,</li>
+                <li>Keras</li>
+              </ul>
+            </div>
             <div class="project-tags">
               <i class="fas fa-chart-bar"></i>
             </div>
