--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 title: Home
 ---
 
-<h1 class="projects-intro">
-  Ricky&nbsp;Kuang is a software&nbsp;engineer living in Los&nbsp;Angeles,&nbsp;CA.
-</h1>
+{% include introduction.html %}
+<div class="projects">
+  {% for project in site.projects reversed %}
+    <div class="project">
+      <p>{{ project.short_description }}</p>
+      {% if project.page %}
+        <a href="{{ project.page }}">View</a>
+      {% else %}
+        <a>Source Code Private</a>
+      {% endif %}
+    </div>
+  {% endfor %}
+</div>
