--- a/contact.html
+++ b/contact.html
@@ -2,4 +2,23 @@
 title: Contact
 ---
 
-<h1>Contact</h1>
+<div class="contact">
+  <h1 class="contact-header">Contact</h1>
+  <form action="https://formspree.io/f/mgepzopa" method="POST" class="contact-form">
+    <label>
+      Name
+      <input type="text" id="name" name="name">
+    </label>
+  
+    <label>
+      Email
+      <input type="text" id="email" name="_replyto">
+    </label>
+  
+    <label>
+      Message
+      <textarea id="message" name="message"></textarea>
+    </label>
+    <button type="submit">Send</button>
+  </form>
+</div>
