fix button styles

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,6 @@ title: Contact
       Message
       <textarea id="message" name="message"></textarea>
     </label>
-    <button type="submit">Send</button>
+    <button class="contact-form-button" type="submit">Send</button>
   </form>
 </div>
