--- a/about.html
+++ b/about.html
@@ -2,24 +2,38 @@
 title: About
 ---
 
-<div class="profile">
-  {% include profile.html %}
-</div>
-
-<div class="resume">
-  <div class="card">
-    {% include experience.html %}
+<div class="about">
+  <div class="profile">
+    {% include profile.html %}
   </div>
-  <div class="card">
-    {% include experience.html %}
-  </div>
-  <div class="card">
-    {% include experience.html %}
-  </div>
-  <div class="card">
-    {% include experience.html %}
-  </div>
-  <div class="card">
-    {% include experience.html %}
+  
+  <div class="resume">
+    <div class="resume-card">
+      <h2 class="resume-card-header">Experience</h2>
+      {% include experience.html %}
+    </div>
+    
+    <div class="resume-card">
+      <h2 class="resume-card-header">Education</h2>
+      {% include education.html %}
+    </div>
+    <div class="resume-card">
+      <h2 class="resume-card-header">Programming Languages</h2>
+      <p class="resume-card-detail">
+        {{ site.data.programming_languages | join: ", " }}
+      </p>
+    </div>
+    <div class="resume-card">
+      <h2 class="resume-card-header">Libraries & Frameworks</h2>
+      <p class="resume-card-detail">
+        {{ site.data.libraries_and_frameworks | join: ", " }}
+      </p>
+    </div>
+    <div class="resume-card">
+      <h2 class="resume-card-header">Tools & Platforms</h2>
+      <p class="resume-card-detail">
+        {{ site.data.tools_and_platforms | join: ", " }} 
+      </p>
+    </div>
   </div>
 </div>
