--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,14 @@
 title: Blog
 ---
 <div class="blog-list">
+  {% if site.posts.size == 0 %}
+  <div class="blog-empty">
+    <h1>There's nothing here yet.</h1>
+    <p>
+      Come back soon!
+    </p>
+  </div>
+  {% endif %}
   {% for post in site.posts %}
   {% include post-item.html %}
   {% endfor %}
