update HTML and CSS for project details page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ title: Home
 ---
 
 {% include introduction.html %}
-<div class="projects">
+<div class="project-list">
   {% for project in site.projects reversed %}
-  <div class="project">
-    <a href="{{ project.url }}" class="project-item">
-      <div class="project-details">
-        <img src="assets/images/kos-mockup.png">
-        <p><span>{{ project.short_description }}</span></p>
+  <div class="project-list-item">
+    <a href="{{ project.url }}" class="project-list-item-link">
+      <div class="project-list-details">
+        <img class="project-list-details-img" src="{{ project.thumbnail }}">
+        <p class="project-list-details-short-description"><span>{{ project.short_description }}</span></p>
       </div>
-      <h3 class="project-name">{{ project.name }}</h3>
+      <h3 class="project-list-name">{{ project.name }}</h3>
     </a>
   </div>
   {% endfor %}
