--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@ title: About
       <li>Built from scratch by me using Jekyll</li>
       <li>Design inspired by <a href="https://himatt.com" target="_blank">himatt.com</a></li>
       <li>The typefaces used are <a href="https://fonts.google.com/specimen/DM+Sans" target="_blank">DM Sans</a>, <a href="https://fonts.google.com/specimen/DM+Serif+Display" target="_blank">DM Serif Display</a>, and <a href="https://fonts.google.com/specimen/DM+Serif+Text" target="_blank">DM Serif Text</a></li>
+      <li>Mockups created using <a href="https://smartmockups.com/" target="_blank">smartmockups.com</a></li>
       <li>All the code for this site is open source and available on <a href="https://github.com/rkuang/rkuang.github.io" target="_blank">Github</a>, deployed and hosted using <a href="https://pages.github.com/" target="_blank">Github Pages</a></li>
     </ul>
   </div>
