make project background color dynamic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
   {% for project in site.projects reversed %}
   <div class="project-list-item">
     <a href="{{ project.url }}" class="project-list-item-link">
-      <div class="project-list-details">
+      <div class="project-list-details" style="background-color: {{ project.thumbnail_background_color }};">
         <img class="project-list-details-img" src="{{ project.thumbnail }}">
         <p class="project-list-details-short-description"><span>{{ project.short_description }}</span></p>
       </div>
