--- a/about.html
+++ b/about.html
@@ -37,9 +37,10 @@ title: About
   <div class="about-site">
     <h2 class="about-site-header">About this site</h2>
     <ul class="dashed-list">
-      <li>Built from scratch by me using Jekyll</li>
+      <li>Built from scratch by me using <a href="https://jekyllrb.com" target="_blank">Jekyll</a></li>
       <li>Design inspired by <a href="https://himatt.com" target="_blank">himatt.com</a></li>
       <li>The typefaces used are <a href="https://fonts.google.com/specimen/DM+Sans" target="_blank">DM Sans</a>, <a href="https://fonts.google.com/specimen/DM+Serif+Display" target="_blank">DM Serif Display</a>, and <a href="https://fonts.google.com/specimen/DM+Serif+Text" target="_blank">DM Serif Text</a></li>
+      <li>Iconography provided by <a href="https://fontawesome.com" target="_blank">fontawesome.com</a></li>
       <li>All the code for this site is open source and available on <a href="https://github.com/rkuang/rkuang.github.io" target="_blank">Github</a>, deployed and hosted using <a href="https://pages.github.com/" target="_blank">Github Pages</a></li>
     </ul>
   </div>
