--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="projects-text">
   <p>
     See what I've worked on below, or 
-    <a href="/ricky-kuang-resume.pdf" target="_blank">check out my resume.</a>
+    <a href="/ricky-kuang-resume.pdf" target="_blank">check&nbsp;out&nbsp;my&nbsp;resume.</a>
   </p>
   <a class="projects-scroll-down" href="#project-list">
     <i class="fas fa-chevron-circle-down"></i>
