--- a/contact.html
+++ b/contact.html
@@ -3,22 +3,34 @@ title: Contact
 ---
 
 <div class="contact">
-  <h1 class="contact-header">Contact</h1>
-  <form action="https://formspree.io/f/mgepzopa" method="POST" class="contact-form">
-    <label>
-      Name
-      <input type="text" id="name" name="name">
-    </label>
-  
-    <label>
-      Email
-      <input type="text" id="email" name="_replyto">
-    </label>
-  
-    <label>
-      Message
-      <textarea id="message" name="message"></textarea>
-    </label>
-    <button class="contact-form-button" type="submit">Send</button>
-  </form>
+  <div class="contact-text">
+    <p>
+      Let's keep in touch! Follow me on <a href="https://github.com/rkuang"
+      rel="noopener noreferrer" target="_blank">GitHub</a>, connect with me on 
+      <a href="https://www.linkedin.com/in/rickykuang" rel="noopener noreferrer"
+      target="_blank">Linkedin</a>, or send me an email using this form or
+      directly at <a href="mailto:rkuang26@gmail.com" rel="noopener
+      noreferrer">rkuang26@gmail.com</a>.
+    </p>
+  </div>
+  <div class="gap"></div>
+  <div class="contact-form">
+    <form action="https://formspree.io/f/mgepzopa" method="POST" class="contact-form">
+      <label>
+        Name
+        <input type="text" id="name" name="name">
+      </label>
+    
+      <label>
+        Email
+        <input type="text" id="email" name="_replyto">
+      </label>
+    
+      <label>
+        Message
+        <textarea id="message" name="message"></textarea>
+      </label>
+      <button class="contact-form-button" type="submit">Send</button>
+    </form>
+  </div>
 </div>
